# holomap

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: hydra-conventions.md  settings.json
.github/workflows/: ci.yml  publish.yml
dev/: export_quality_fixtures.py  export_spectral_fixtures.py  export_stage2_fixtures.py
examples/: bench.rs  reduce_tsv.rs
src/: api.rs  components.rs  curve.rs  eigen.rs  fixture_parity.rs  fuzzy.rs  knn.rs  lib.rs  metric.rs  rng.rs  sgd.rs  smooth_knn.rs  sparse.rs  spectral.rs
tests/: determinism_proptest.rs  quality_gate.rs
tests/fixtures/: quality_blobs.json  quality_swiss_roll.json  spectral_cloud_connected.json  stage2_blobs_euclidean.json  stage2_cosine.json  stage2_duplicates_euclidean.json
