[package]
name = "holomap"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
description = "Deterministic UMAP — the bulk, on the boundary. Same input, same params, same seed: bit-identical embeddings."
repository = "https://github.com/mnmal-ai/holomap"
keywords = ["umap", "dimension-reduction", "deterministic", "embedding", "manifold"]
categories = ["science", "algorithms", "mathematics"]
# publish whitelist: the crate ships source + docs only — no dev scripts,
# fixtures, CI, or agent-context files
include = ["src/**", "examples/**", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
nalgebra = { version = "0.35.0", default-features = false, features = ["std"] }
ndarray = { version = "0.16", optional = true }
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
ndarray = ["dep:ndarray"]

[package.metadata.docs.rs]
all-features = true
